--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,11 @@
     {
       "src": "icon.svg",
       "sizes": "any",
-      "purpose": "any maskable"
+      "purpose": "maskable"
+    }, {
+      "src": "icon.svg",
+      "sizes": "any",
+      "purpose": "any"
     }, {
       "src": "splash.png",
       "sizes": "512x512",
